# network-packet-classification

./: .editorconfig  .gitattributes  .gitignore  .mailmap  .stCommitMsg  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp  makefile
INFO/: BigSub.txt  ExactSub.txt  ExactSub_ipD.txt  ExactSub_ipS.txt  ExactSub_portD.txt  LinearSearch_FaultPacket5D_test.txt  SmallSubList1.txt  SmallSubList3.txt  ZeroSub.txt  exactRule5V.txt  hashTableV.txt  hashTableV_ipD.txt  hashTableV_ipS.txt  hashTableV_portD.txt  loadPacket5D_test.txt  loadRule5D_test.txt  rulesetAnalysis.txt  uniqRule5V.txt
IO/: CMakeLists.txt  input.cpp  input.hpp  inputFile_test.cpp  inputFile_test.hpp  input_v1.cpp  input_v1.hpp  output_v1.cpp  output_v1.hpp
METHOD/: PTtree.cpp  PTtree.hpp
OBJECT/: basis.cpp  basis.hpp  tuple_v1.hpp
PT-tree_main/: L3.txt  L4.txt  makefile  ptMain.cpp
classifiers/: CMakeLists.txt  ksetSearch.cpp  ksetSearch.hpp  linearSearch.cpp  linearSearch.hpp  tSearch.cpp  tSearch.hpp
docs/: can run or not.txt  reverseMemCpy_union_ip_analysis.md  source data 2.ods  source data 2.xlsx  union_ip_analysis.md
html/: _p_ttree_8cpp.html  _p_ttree_8cpp__incl.md5  _p_ttree_8cpp_abbad462dd1fbeaad29449e0e78e118ce_icgraph.md5  _p_ttree_8cpp_source.html  _p_ttree_8hpp.html  _p_ttree_8hpp__dep__incl.md5  _p_ttree_8hpp__incl.md5  _p_ttree_8hpp_source.html  annotated.html  basis_8cpp.html  basis_8cpp__incl.md5  basis_8cpp_source.html  basis_8hpp.html  basis_8hpp__dep__incl.md5  basis_8hpp__incl.md5  basis_8hpp_source.html  class_input_file5_d-members.html  class_input_file5_d.html  (+125 more)
(+170 files in other folders)
